<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repositoryRCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scenes.repositoryList.ui.RepositoryListActivity"
    tools:listitem="@layout/item_github_repository"
    tools:itemCount="5"/>