<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/normal_margin"
    android:layout_marginTop="@dimen/small_margin"
    android:layout_marginEnd="@dimen/normal_margin"
    android:layout_marginBottom="@dimen/small_margin"
...
